# brighty

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: device.cpp.21FD127EBA460759.idx  device.hpp.3E6FFC80AFB2FDC4.idx  main.cpp.BE0C1FE845008F17.idx
.github/workflows/: build.yml
include/: device.hpp
src/: device.cpp  main.cpp
